# VFCMFD

./: CMakeLists.txt  Doxyfile  README.md  descriptors.txt  diagram.puml  error
blur/: blurdiff.py  left.py  mask.py  noise_analysis.py
docs/html/: _clustered_line_8cpp.html  _clustered_line_8cpp__incl.map  _clustered_line_8cpp__incl.md5  _clustered_line_8cpp_source.html  _clustered_line_8hpp.html  _clustered_line_8hpp__dep__incl.map  _clustered_line_8hpp__dep__incl.md5  _clustered_line_8hpp__incl.map  _clustered_line_8hpp__incl.md5  _clustered_line_8hpp_source.html  _interest_point_8cpp.html  _interest_point_8cpp__incl.map  _interest_point_8cpp__incl.md5  _interest_point_8cpp_source.html  _interest_point_8hpp.html  _interest_point_8hpp__dep__incl.map  _interest_point_8hpp__dep__incl.md5  _interest_point_8hpp__incl.map  _interest_point_8hpp__incl.md5  _interest_point_8hpp_source.html  _r_e_a_d_m_e_8md.html  (+327 more)
images/: 00072.xml  00074.xml  00074_F.jpg.arff  00097.jpg.arff  02089.jpg.arff  02271.jpg.arff  TP_C01_001_copy.png.arff  TP_C01_002_copy.png.arff  clusters.arff  missiles.jpg.arff  missiles.out
include/: ClusteredLine.hpp  DetectorOptions.hpp  InterestPoint.hpp  InterestPoints.hpp  copyMoveDetector.hpp  dbscan.hpp  line.hpp  surf.hpp
python/: afficheClusters.py  afficheHough.py  clusters.txt  comparison.py  comparisonIdx.py  hough.py  houghCoord.txt  lines.txt  plot3D.py  plotROC.py  plotScores.py  plotScores3D.py  pouet.csv  repart2.csv  repartition_all.py  repartition_angles.py  repartition_both.py  repartition_diff.py  repartition_norms.py  skate_clusters.txt  skate_lines.txt  time.py  time_log.py
resultats/: n2.txt
src/: ClusteredLine.cpp  InterestPoint.cpp  InterestPoints.cpp  copyMoveDetector.cpp  dbscan.cpp  line.cpp  main.cpp  surf.cpp
(+1403 files in other folders)
